--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
+  "name": "Financial Website App",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
